[app deploy] Add startup script to --enable-preview